--- a/HotelManager/HotelManager.csproj
+++ b/HotelManager/HotelManager.csproj
@@ -74,7 +74,11 @@
   <ItemGroup>
     <Compile Include="DAO\AccessDAO.cs" />
     <Compile Include="DAO\AccountDAO.cs" />
+    <Compile Include="DAO\BillDAO.cs" />
+    <Compile Include="DAO\BillDetailsDAO.cs" />
     <Compile Include="DAO\BookRoomDAO.cs" />
+    <Compile Include="DAO\CustomerDAO.cs" />
+    <Compile Include="DAO\CustomerTypeDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\AccountTypeDAO.cs" />
     <Compile Include="DAO\ReceiveRoomDAO.cs" />
@@ -82,6 +86,8 @@
     <Compile Include="DAO\ReceiveRoomInfoDAO.cs" />
     <Compile Include="DAO\RoomDAO.cs" />
     <Compile Include="DAO\RoomTypeDAO.cs" />
+    <Compile Include="DAO\ServiceDAO.cs" />
+    <Compile Include="DAO\ServiceTypeDAO.cs" />
     <Compile Include="DTO\Account.cs" />
     <Compile Include="DTO\Bill.cs" />
     <Compile Include="DTO\BillDetails.cs" />
@@ -115,6 +121,18 @@
     </Compile>
     <Compile Include="fAddRoom.Designer.cs">
       <DependentUpon>fAddRoom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fAddService.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fAddService.Designer.cs">
+      <DependentUpon>fAddService.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fAddServiceType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fAddServiceType.Designer.cs">
+      <DependentUpon>fAddServiceType.cs</DependentUpon>
     </Compile>
     <Compile Include="fBookRoom.cs">
       <SubType>Form</SubType>
@@ -164,6 +182,18 @@
     <Compile Include="fReceiveRoomDetails.Designer.cs">
       <DependentUpon>fReceiveRoomDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="fService.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fService.Designer.cs">
+      <DependentUpon>fService.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fServiceType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fServiceType.Designer.cs">
+      <DependentUpon>fServiceType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fAbout.resx">
@@ -174,6 +204,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fAddRoom.resx">
       <DependentUpon>fAddRoom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fAddService.resx">
+      <DependentUpon>fAddService.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fAddServiceType.resx">
+      <DependentUpon>fAddServiceType.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fBookRoom.resx">
       <DependentUpon>fBookRoom.cs</DependentUpon>
@@ -198,6 +234,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fReceiveRoomDetails.resx">
       <DependentUpon>fReceiveRoomDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fService.resx">
+      <DependentUpon>fService.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fServiceType.resx">
+      <DependentUpon>fServiceType.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
